# ringal

./: Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml  test.yml
src/: buffer.rs  header.rs  lib.rs  tests.rs
