[package]
name = "ringal"
version = "0.3.0"
authors = ["bmuddha13@gmail.com"]
description = "Efficient ring allocator for short-lived buffers."
license = "MIT"
repository = "https://github.com/bmuddha/ringal"
documentation = "https://docs.rs/ringal"
homepage = "https://crates.io/crates/ringal"
keywords = ["allocator", "ring", "buffer", "memory"]
categories = ["memory-management", "concurrency"]
edition = "2021"

[dependencies]

[features]
default = []
drop = []
tls = ["drop"]
